--- a/components/Header/HeaderDashboard/index.module.scss
+++ b/components/Header/HeaderDashboard/index.module.scss
@@ -12,13 +12,18 @@
 
   width: 100%;
   @include ResponsiveHeight(70px, 70px, 60px);
-  @include ResponsivePadding(0 80px 0 340px, 0 32px 0 200px, 0 8px 0 83px);
+  @include ResponsivePadding(0 80px 0 320px, 0 32px 0 180px, 0 8px 0 80px);
   border-bottom: 1px solid $gray-d9;
 
   background: $white;
   color: $black;
 
-  box-sizing: border-box;
+  transition: background-color 0.3s ease, color 0.3s ease;
+
+  &.dark {
+    background-color: $dark-theme;
+    color: rgba($white, 0.87);
+  }
 }
 
 .header-dashboard-container {
@@ -54,6 +59,12 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+
+    transition: background-color 0.3s ease, color 0.3s ease;
+
+    &.dark {
+      color: $white;
+    }
   }
 }
 
@@ -84,6 +95,28 @@
     border-radius: 6px;
   }
 
+  transition: background-color 0.3s ease, color 0.3s ease;
+
+  &.dark {
+    background: $dark-card;
+  }
+
+  &:hover {
+    cursor: pointer;
+    background: $back-yellow;
+
+    &.dark {
+      background: $dark-card-hover;
+    }
+  }
+  &:active {
+    background: $main-yellow-active;
+
+    &.dark {
+      background: $dark-card-active;
+    }
+  }
+
   > div {
     @include Flex(row, space-between, center);
     gap: 8px;
@@ -97,72 +130,24 @@
         display: none;
       }
     }
+
+    > svg {
+      > path {
+        fill: currentColor;
+      }
+    }
+
+    transition: background-color 0.3s ease, color 0.3s ease;
+
+    &.dark {
+      color: rgba($white, 0.87);
+    }
   }
 }
 
 .dashboard-member-area {
   @include Flex(row, space-between, center);
-  @include ResponsiveGap(40, 32, 16);
-}
-
-.dashboard-members {
-  position: relative;
-  @include Flex(row, space-between, center);
-  @include ResponsiveWidth(138px, 90px, 90px);
-  height: 40px;
-}
-
-.dashboard-member {
-  @include Flex(row, space-between, center);
-  position: absolute;
-  width: 38px;
-  height: 38px;
-  border: 2px solid $white;
-  border-radius: 50%;
-  color: $white;
-
-  &.member1 {
-    background-color: red;
-    top: 0px;
-    left: 0px;
-    z-index: 1;
-  }
-
-  &.member2 {
-    background-color: orange;
-    top: 0px;
-    left: 25px;
-    z-index: 2;
-  }
-
-  &.member3 {
-    background-color: yellow;
-    top: 0px;
-    left: 50px;
-    z-index: 3;
-  }
-
-  &.member4 {
-    display: none;
-    @include desktop {
-      display: flex;
-      background-color: green;
-      top: 0px;
-      left: 75px;
-      z-index: 4;
-    }
-  }
-
-  &.member5 {
-    display: none;
-    @include desktop {
-      display: flex;
-      background-color: blue;
-      top: 0px;
-      left: 100px;
-      z-index: 5;
-    }
-  }
+  @include ResponsiveGap(40, 32, 8);
 }
 
 .dashboard-half-line {
