--- a/components/Button/index.module.scss
+++ b/components/Button/index.module.scss
@@ -6,6 +6,10 @@
   line-height: 1.2em;
   box-sizing: border-box;
   white-space: nowrap;
+
+  &.dark {
+    border: none;
+  }
 }
 
 .login {
@@ -26,11 +30,15 @@
 .primary {
   border: 1px solid $main-yellow;
   border-radius: 4px;
-  background: $main-yellow;
+  background: rgba($main-yellow, 0.87);
   color: $white;
 
   @include ResponsivePadding(7px 29px, 6px 23px, 7px 37px);
   @include FontStyle(14, 500, 14, 12);
+
+  &.dark {
+    @include ResponsivePadding(8px 30px, 7px 24px, 8px 38px);
+  }
 }
 
 .secondary {
@@ -40,6 +48,12 @@
 
   @include ResponsivePadding(7px 29px, 6px 23px, 7px 37px);
   @include FontStyle(14, 500, 14, 12);
+
+  transition: background-color 0.3s ease, color 0.3s ease;
+  &.dark {
+    @include ResponsivePadding(8px 30px, 7px 24px, 8px 38px);
+    background-color: $dark-secondary-btn;
+  }
 }
 
 .delete {
@@ -49,6 +63,12 @@
 
   @include ResponsivePadding(7px 29px, 7px 29px, 6px 15px);
   @include FontStyle(14, 500, 14, 12);
+
+  transition: background-color 0.3s ease, color 0.3s ease;
+  &.dark {
+    background-color: $dark-card;
+    color: rgba($white, 0.87);
+  }
 }
 
 .add-column {
@@ -58,6 +78,12 @@
 
   @include ResponsivePadding(24px 85px, 24px 180px, 20px 60px);
   @include FontStyle(18, 700, 18, 16);
+
+  transition: background-color 0.3s ease, color 0.3s ease;
+  &.dark {
+    background-color: $dark-card;
+    color: rgba($white, 0.87);
+  }
 }
 
 .add-todo {
@@ -65,6 +91,13 @@
   background: $white;
 
   @include ResponsivePadding(9px 146px, 9px 261px, 6px 132px);
+
+  transition: background-color 0.3s ease, color 0.3s ease;
+  &.dark {
+    @include ResponsivePadding(10px 146px, 10px 261px, 7px 132px);
+    background-color: $dark-card;
+    color: rgba($white, 0.87);
+  }
 }
 
 .delete-dashboard {
@@ -83,6 +116,12 @@
 
   @include ResponsivePadding(24px 99px, 23px 56px, 19px 70px);
   @include FontStyle(16, 600, 16, 14);
+
+  transition: background-color 0.3s ease, color 0.3s ease;
+  &.dark {
+    background-color: $dark-card;
+    color: rgba($white, 0.87);
+  }
 }
 
 .dashboard {
@@ -92,6 +131,13 @@
 
   @include ResponsivePadding(25px 20px, 24px 20px, 20px 20px);
   @include FontStyle(16, 600, 16, 14);
+
+  transition: background-color 0.3s ease, color 0.3s ease;
+  &.dark {
+    @include ResponsivePadding(24px 20px, 23px 20px, 19px 20px);
+    background-color: $dark-card;
+    color: rgba($white, 0.87);
+  }
 }
 
 .modal-primary {
@@ -111,4 +157,11 @@
   color: $main-yellow;
   @include ResponsivePadding(14px 0px, 14px 0px, 15px 0px);
   @include FontStyle('lg', 600, 'lg', 'md');
+
+  transition: background-color 0.3s ease, color 0.3s ease;
+  &.dark {
+    @include ResponsivePadding(13px 0px, 13px 0px, 14px 0px);
+    background-color: $dark-secondary-btn;
+    color: rgba($white, 0.87);
+  }
 }
