--- a/components/ButtonSetForPagination/Button/index.module.scss
+++ b/components/ButtonSetForPagination/Button/index.module.scss
@@ -29,4 +29,20 @@
     width: 16px;
     height: 16px;
   }
+
+  &:hover {
+    background: $back-yellow;
+    cursor: pointer;
+
+    &.dark {
+      background: $dark-theme-hover;
+    }
+  }
+  &:active {
+    background: $main-yellow-active;
+
+    &.dark {
+      background: $dark-theme-active;
+    }
+  }
 }
