--- a/components/SideMenu/index.module.scss
+++ b/components/SideMenu/index.module.scss
@@ -11,14 +11,20 @@
   @include ResponsiveWidth(300px, 160px, 67px);
   @include ResponsiveMinWidth(300px, 160px, 67px);
   height: 100vh;
-  padding: 20px 0 0;
+  padding: 20px 0;
   border-right: 1px solid $gray-d9;
 
   background: $white;
+  transition: background-color 0.3s ease, color 0.3s ease;
+
+  &.dark {
+    background-color: $dark-theme;
+  }
 }
 
 .side-menu-container {
   @include Flex(column, flex-start, center);
+  flex-grow: 1;
 
   @include desktop {
     align-items: start;
@@ -75,7 +81,8 @@
 }
 
 .dashboard-container {
-  @include Flex(column, space-between, center);
+  @include Flex(column, flex-start, center);
+  flex-grow: 1;
   @include ResponsiveGap(16, 15, 22);
   width: 100%;
 }
@@ -90,9 +97,27 @@
   @include FontStyle('xs', 600, 'xs', '');
   color: $gray-78;
 
+  transition: background-color 0.3s ease, color 0.3s ease;
+
+  &.dark {
+    color: rgba($white, 0.87);
+  }
+
+  > svg {
+    > path {
+      fill: currentColor;
+    }
+  }
+
   > .dashboard-header-text {
     @include mobile {
       display: none;
+    }
+
+    transition: background-color 0.3s ease, color 0.3s ease;
+
+    &.dark {
+      color: $white;
     }
   }
 
@@ -105,14 +130,15 @@
 
 .dashboard-list {
   @include Flex(column, flex-start, center);
+  flex-grow: 1;
   @include ResponsiveGap(8, 2, 6);
   width: 100%;
-  height: 82vh;
+  height: 0px;
   white-space: nowrap;
   overflow-y: scroll;
   overscroll-behavior: contain;
 
   &::-webkit-scrollbar {
-    display: none; /* Chrome, Safari, Opera*/
+    display: none;
   }
 }
