--- a/containers/dashboard/id/modals/todoModal/assigneeCard/AssigneeCard.module.scss
+++ b/containers/dashboard/id/modals/todoModal/assigneeCard/AssigneeCard.module.scss
@@ -52,11 +52,15 @@
   .container {
     @include Flex(row, space-between, null);
     width: 100%;
-    height: 85px;
+    height: 80px;
     padding: 9px 16px;
     gap: 8px;
   }
-  .title-and-contents {
-    gap: 5px;
-  }
+  // .title-and-contents {
+  //   gap: 5px;
+  // }
+}
+
+.date {
+  line-height: 34px;
 }
