--- a/containers/mypage/EditProfileForm.module.scss
+++ b/containers/mypage/EditProfileForm.module.scss
@@ -63,6 +63,7 @@
     font-size: 16px;
     font-weight: 700;
     line-height: 26px;
+    user-select: none;
 
     &:focus {
       outline: 2px solid transparent;
