--- a/components/Header/HeaderDashboard/index.module.scss
+++ b/components/Header/HeaderDashboard/index.module.scss
@@ -21,6 +21,7 @@
   transition: background-color 0.3s ease, color 0.3s ease;
 
   &.dark {
+    border-bottom: 1px solid $dark-card;
     background-color: $dark-theme;
     color: rgba($white, 0.87);
   }
@@ -98,6 +99,7 @@
   transition: background-color 0.3s ease, color 0.3s ease;
 
   &.dark {
+    border: 1px solid $dark-card;
     background: $dark-card;
   }
 
