--- a/components/Header/HeaderMain/index.module.scss
+++ b/components/Header/HeaderMain/index.module.scss
@@ -22,6 +22,7 @@
   transition: background-color 0.3s ease, color 0.3s ease;
 
   &.dark {
+    border-bottom: 1px solid $dark-card;
     background-color: $dark-theme;
     color: rgba($white, 0.87);
   }
