--- a/components/SideMenu/index.module.scss
+++ b/components/SideMenu/index.module.scss
@@ -18,6 +18,7 @@
   transition: background-color 0.3s ease, color 0.3s ease;
 
   &.dark {
+    border-right: 1px solid $dark-card;
     background-color: $dark-theme;
   }
 }
