fix: 다크모드 수정 (#134)

--- a/containers/dashboardEdit/EditDashboardName/EditDashboardName.module.scss
+++ b/containers/dashboardEdit/EditDashboardName/EditDashboardName.module.scss
@@ -11,6 +11,25 @@
     padding-bottom: 8px;
     @include FontStyle('2xl', 700, '2xl', 'xl');
   }
+  button {
+    transition: 0.3s;
+    &:hover {
+      background-color: $main-yellow-active;
+    }
+    &:disabled {
+      cursor: not-allowed;
+      background-color: $gray-d9;
+    }
+  }
+  &.dark {
+    background: $dark-card;
+    color: rgba($white, 0.87);
+    button {
+      &:disabled {
+        background-color: $dark-card-top;
+      }
+    }
+  }
 }
 
 .label-container {
