--- a/containers/dashboardEdit/EditInvitation/InvitationListItem/InvitationListItem.module.scss
+++ b/containers/dashboardEdit/EditInvitation/InvitationListItem/InvitationListItem.module.scss
@@ -11,9 +11,24 @@
   &:last-child {
     border-bottom: none;
   }
+  button {
+    border: 1px solid $main-yellow;
+    &:hover {
+      color: $main-yellow-active;
+      border: 1px solid $main-yellow-active;
+    }
+  }
   &.dark {
     .invitation-email {
       color: rgba($white, 0.87);
+    }
+    button {
+      border: 1px solid $main-yellow;
+      color: $main-yellow;
+      &:hover {
+        color: $main-yellow-active;
+        border: 1px solid $main-yellow-active;
+      }
     }
   }
 }
