--- a/containers/myDashboard/InviteListItem/InviteListItem.module.scss
+++ b/containers/myDashboard/InviteListItem/InviteListItem.module.scss
@@ -22,7 +22,6 @@
     display: none;
   }
   &.dark {
-    padding-top: 20px;
     color: rgba($white, 0.87);
     border-bottom: 1px solid $dark-card-top;
   }
@@ -31,6 +30,7 @@
 @include tablet {
   .invite-list-item-wrapper {
     padding-left: 28px;
+    padding-right: 28px;
   }
 }
 
