--- a/containers/dashboardEdit/DashboardEdit.module.scss
+++ b/containers/dashboardEdit/DashboardEdit.module.scss
@@ -10,14 +10,37 @@
     gap: 3px;
     margin-right: auto;
     svg {
-      transform: translateY(2px);
-      rotate: 180deg;
+      transform: translateY(-1px);
+    }
+  }
+  .delete-button-wrapper {
+    button {
+      @include ResponsiveWidth(700px, 544px, 284px);
+      background-color: $white;
+      color: $main-yellow;
+      border: 1px solid $main-yellow;
+      transition: 0.2s;
+      &:hover {
+        color: $main-yellow-active;
+        border: 1px solid $main-yellow-active;
+      }
     }
   }
   &.dark {
     background-color: $dark-theme;
     .link {
-      color: rgba($white, 0.6);
+      color: rgba($white, 0.87);
+    }
+    .delete-button-wrapper {
+      button {
+        background-color: $dark-card;
+        color: $main-yellow;
+        border: 1px solid $main-yellow;
+        &:hover {
+          border: 1px solid $main-yellow-active;
+          color: $main-yellow-active;
+        }
+      }
     }
   }
 }
