refactor: 데이터 성공&실패 토스트 처리 (#135)
* refactor: 데이터 성공&실패 토스트 처리

* fix: 대시보드 이동 안되는 에러 수정

--- a/components/ProfileIcon/ProfileIcon.module.scss
+++ b/components/ProfileIcon/ProfileIcon.module.scss
@@ -11,10 +11,14 @@
 
   @include Flex(row, center, center);
   position: relative;
-  transition: all 1s ease;
+  transition: all 0.4s ease;
 
   &.dark {
-    border: 2px solid rgba($white, 0.5);
+    border: 2px solid $dark-card-top;
+
+    .substring {
+      color: $dark-card-top;
+    }
   }
 
   .image {
