fix: 헤더메인 수정 (#136)

--- a/components/Header/HeaderMain/index.module.scss
+++ b/components/Header/HeaderMain/index.module.scss
@@ -45,6 +45,11 @@
       display: inline-block;
     }
   }
+
+  > img {
+    @include ResponsiveWidth(144px, 144px, 36px);
+    @include ResponsiveHeight(36px, 36px, 36px);
+  }
 }
 
 .sign-container {
