Fix: 다크모드 로고 수정 및 미리보기 이미지 닉네임 설정 (#137)
* Feat: 로그인 및 회원가입 기능 구현

* Feat: 로그인 및 회원가입 기능 구현

* Chore: 로그인 및 회원가입 기능 구현 수정

* Chore: 로그인 및 회원가입 기능 구현 수정

* Chore: 로그인 및 회원가입 기능 구현 수정

* Feat: 로그인 및 회원가입 ui  구현

* Feat: /mypage 구현 및 디자인 제작

* FIX: 수정사항 적용

* FIX: 수정사항 적용(코드 리뷰 피드백 적용 및 멘토링 수정)

* FEET: 로그인, 회원가입, 비번 변경 Toast 생성 및 동의 모달 추가

* Chore: z-index 변경 되돌리기

* Chore: 복구

* FIX: /mypage, Toast, Modal 오류 수정

* Fix: 수정사항 적용중

* Fix: 수정사항 적용중

* Fix: 수정사항 적용중

* Fix: style 수정

* Fix: styles 수정(dark theme 적용 및 구조 수정)

* Fix: Toast, Imageinput 수정

* Fix: Toast, Imageinput 수정

* Fix: Toast, Imageinput 수정

* Fix: Login 수정

* Fix: 다크모드 로고 수정 및 미리보기 이미지 닉네임 설정

* Chore: 로그아웃 Toast 추가 및 기본이미지로 되돌리기 추가

---------

Co-authored-by: [K777agent] <[junzang00@gmail.com]>

--- a/containers/sign/signin/index.module.scss
+++ b/containers/sign/signin/index.module.scss
@@ -22,9 +22,11 @@
     }
     @include mobile {
       width: 375px;
+      margin: 12px;
     }
     .member {
-      margin-top: 20px;
+      margin-top: 24px;
+      margin-bottom: 73px;
       text-align: center;
       color: $black-33;
       @include FontStyle(16, 400);
