--- a/containers/sign/TopLogoSection.module.scss
+++ b/containers/sign/TopLogoSection.module.scss
@@ -9,8 +9,16 @@
 
   .image {
     @include Flex(column, center, center);
-    width: 400px;
-    height: 400px;
+    .Logo-Image {
+      max-width: 400px;
+      max-height: 400px;
+      width: 100%;
+      height: 100%;
+    }
+    @include mobile {
+      max-width: 300px;
+      max-height: 300px;
+    }
   }
 
   .text {
