styles: 선택중인 보드 사이드메뉴 색 (#139)

--- a/components/SideMenu/SideMenuItem/index.module.scss
+++ b/components/SideMenu/SideMenuItem/index.module.scss
@@ -10,6 +10,14 @@
 
   transition: background-color 0.3s ease;
 
+  &.selected {
+    background: rgba($back-yellow, 0.6);
+
+    &.dark {
+      background: rgba($dark-theme-hover, 0.6);
+    }
+  }
+
   &:hover {
     cursor: pointer;
     background: $back-yellow;
