style: 랜딩 페이지 다크모드 수정 (#140)
* style: 최종 수정

* style: 랜딩 페이지 애니메이션 추가

--- a/containers/dashboard/id/dropdown/Dropdown.module.scss
+++ b/containers/dashboard/id/dropdown/Dropdown.module.scss
@@ -24,7 +24,7 @@
 
   &.dark {
     ul {
-      background-color: $dark-card-top;
+      background-color: $dark-dropdown;
       border: none;
 
       li {
