--- a/containers/dashboard/id/modals/todoModal/assigneeCard/AssigneeCard.module.scss
+++ b/containers/dashboard/id/modals/todoModal/assigneeCard/AssigneeCard.module.scss
@@ -38,7 +38,8 @@
 }
 
 .contents {
-  @include FontStyle(md, regular, md, xs);
+  white-space: nowrap;
+  @include FontStyle(md, regular, sm, xs);
   color: $black-33;
 }
 
@@ -50,17 +51,9 @@
 
 @include mobile {
   .container {
-    @include Flex(row, space-between, null);
     width: 100%;
-    height: 80px;
+    height: fit-content;
     padding: 9px 16px;
     gap: 8px;
   }
-  // .title-and-contents {
-  //   gap: 5px;
-  // }
-}
-
-.date {
-  line-height: 34px;
 }
