--- a/containers/dashboard/id/dropdown/SelectProgressDropdown/index.module.scss
+++ b/containers/dashboard/id/dropdown/SelectProgressDropdown/index.module.scss
@@ -25,10 +25,19 @@
 .menu {
   @include MenuStyle;
   width: 100%;
+  height: fit-content;
+  @include Flex(column, center, center);
+  gap: 6px;
+  padding: 10px;
+  background-color: $white;
 }
 
 .list {
   @include ListStyle;
+  padding: 5px 10px;
+  width: 100%;
+  height: 50px;
+  border-radius: 8px;
 
   &:hover {
     background-color: #eeeeee;
@@ -40,25 +49,24 @@
 
   &.dark {
     .button {
-      background-color: $gray-d9;
+      background-color: $dark-card-top;
+      border: 1px solid $dark-card-top;
+      // color: rgba($white, 0.6);
     }
 
     .menu {
       border-radius: 8px;
+      background-color: $dark-card-top;
       .list {
-        background-color: $gray-d9; // 이거 컬러에 맞게 수정하기 뭔가 밝은듯?
+        background-color: $dark-card-top;
+        color: rgba($white, 0.6);
 
         &:hover {
-          background-color: $dark-card-top;
+          background-color: $dark-card-active;
         }
 
-        &:first-child {
-          border-top-right-radius: 8px;
-          border-top-left-radius: 8px;
-        }
-        &:last-child {
-          border-bottom-right-radius: 8px;
-          border-bottom-left-radius: 8px;
+        &:active {
+          background-color: $dark-card-hover;
         }
       }
     }
