--- a/containers/dashboard/id/modals/todoEditModal/TodoEditModal.module.scss
+++ b/containers/dashboard/id/modals/todoEditModal/TodoEditModal.module.scss
@@ -20,17 +20,26 @@
       color: rgba($white, 0.87);
     }
     .form-input {
-      background-color: $gray-d9;
+      background-color: $dark-card-top;
+      border: 1px solid $dark-card-top;
+      color: rgba($white, 0.6);
+      &::placeholder {
+        color: rgba($white, 0.6);
+      }
     }
     .button {
       background-color: $dark-secondary-btn;
+      color: rgba($white, 0.87);
       border: none;
+
       &.yellow {
         background-color: $main-yellow;
       }
     }
     .date-input {
-      background-color: $gray-d9;
+      color: rgba($white, 0.6);
+      background-color: $dark-card-top;
+      border: 1px solid $dark-card-top;
     }
   }
 }
@@ -81,7 +90,7 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 26px;
-  color: $violet;
+  color: $main-yellow;
 }
 
 .form-input {
