feat: 로딩처리 추가 (#143)

--- a/containers/myDashboard/invitedDashboard/InvitedDashboard.module.scss
+++ b/containers/myDashboard/invitedDashboard/InvitedDashboard.module.scss
@@ -71,6 +71,11 @@
   }
 }
 
+.loading {
+  @include Flex(row, center, center);
+  @include ResponsiveHeight(300px, 200px, 200px);
+}
+
 .empty-wrapper {
   @include ResponsiveHeight(300px, 200px, 200px);
 }
