--- a/containers/dashboard/id/modals/todoModal/assigneeCard/AssigneeCard.module.scss
+++ b/containers/dashboard/id/modals/todoModal/assigneeCard/AssigneeCard.module.scss
@@ -25,7 +25,6 @@
 .title-and-contents {
   @include Flex(column, null, null);
   gap: 6px;
-  width: 45%;
 }
 
 .title {
@@ -57,5 +56,9 @@
     height: fit-content;
     padding: 9px 20px;
     gap: 20px;
+  }
+
+  .title-and-contents {
+    width: 45%;
   }
 }
