--- a/containers/dashboardEdit/DashboardEdit.module.scss
+++ b/containers/dashboardEdit/DashboardEdit.module.scss
@@ -3,8 +3,9 @@
 .container {
   @include Flex(column, null, null);
   gap: 16px;
-  @include ResponsivePadding(20px, 20px, 12px);
+  @include ResponsivePadding(20px 20px 30px, 20px 20px 30px, 12px 12px 30px);
   background-color: $gray-fa;
+  height: 100%;
   .link {
     @include Flex(row, null, center);
     gap: 3px;
