fix: 페이지네이션을 위한 key추가 (#149)

--- a/containers/dashboardEdit/EditInvitation/EditInvitation.module.scss
+++ b/containers/dashboardEdit/EditInvitation/EditInvitation.module.scss
@@ -59,3 +59,17 @@
     }
   }
 }
+
+@include mobile {
+  .container {
+    .section-header {
+      .section-header-actions {
+        @include Flex(column, null, null);
+        .dashboard-manage-button {
+          margin-left: auto;
+          padding: 5px 5px;
+        }
+      }
+    }
+  }
+}
